--- a/default.yml
+++ b/default.yml
@@ -19,7 +19,11 @@ org_settings:
   server_settings:
     server_url: $FLEET_URL
   org_info:
-    org_name: Fleet
+    org_name: SomeOrganizationName
+  webook_settings:
+    activitivies_webhook:
+      enable_activities_webhook: true
+      destination_url: https://webhook.site/f716ac38-01a0-480d-8792-ecc1b0664fa9
   secrets:
     - secret: "$FLEET_GLOBAL_ENROLL_SECRET"
   features:
