--- a/default.yml
+++ b/default.yml
@@ -21,7 +21,7 @@ org_settings:
   org_info:
     org_name: SomeOrganizationName
   webhook_settings:
-    activitivies_webhook:
+    activities_webhook:
       enable_activities_webhook: true
       destination_url: https://webhook.site/f716ac38-01a0-480d-8792-ecc1b0664fa9
   secrets:
