--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -21,12 +21,19 @@ controls:
   macos_settings:
     custom_settings:
     - path: ../lib/macos/configuration-profiles/disable-bluetooth-file-sharing.mobileconfig
+    - path: ../lib/macos/configuration-profiles/passcode-settings-ddm.json
     macos_updates:
       deadline: "2025-12-25"
       minumum_version: "26.0"
+   ipados_updates:
+      deadline: "2025-12-31"
+      minumum_version: "26.0"
+      
   scripts:
     - path: ../lib/macos/scripts/remove-zoom-artifacts.script.sh
     - path: ../lib/macos/scripts/set-timezone.script.sh
+    - path: ../lib/windows/scripts/set-wallpaper.ps1
+  enable_disk_encryption: true
 team_settings:
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
