--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -24,10 +24,10 @@ controls:
     - path: ../lib/macos/configuration-profiles/passcode-settings-ddm.json
     macos_updates:
       deadline: "2025-12-25"
-      minumum_version: "26.0"
+      minimum_version: "26.0"
    ipados_updates:
       deadline: "2025-12-31"
-      minumum_version: "26.0"
+      minimum_version: "26.0"
   scripts:
     - path: ../lib/macos/scripts/remove-zoom-artifacts.script.sh
     - path: ../lib/macos/scripts/set-timezone.script.sh
