--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -40,4 +40,11 @@ team_settings:
   features:
     enable_host_users: true
     enable_software_inventory: true
+  webhook_settings:
+    failing_policies_webhook:
+      enable_failing_policies_webhook: true
+      destination_url: https://webhook.site/f716ac38-01a0-480d-8792-ecc1b0664fa9
+      host_batch_size: 0
+        policy_ids:
+          - 3035
 software:
