--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -48,3 +48,6 @@ team_settings:
       policy_ids:
           - 3035
 software:
+  packages:
+    - path: ../lib/windows/software/cloudflare-warp.yml
+      self_service: false
